# nova-dino-run

./: .gitignore  CMakeLists.txt  README.md
src/: Coin.cpp  Coin.h  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  UI.cpp  UI.h
web/: index.html
